feat(picker.scss common.scss): 修改边框方式

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,6 +1,8 @@
+$color-black: #000;
 $font-size-md: 14px;
 $font-size-xl: 18px;
 $color-white: #fff;
+$color-light-border: rgba($color-black, .08);
 $color-black: #000;
 $picker-cancel-font-color: rgba($color-black, .38);
 $picker-title-font-color: rgba($color-black, .87);
